src/parser/y.output

state 0
	$accept: .start $end 

	SELECT  shift 8
	'('  shift 7
	.  error

	select_clause  goto 6
	select_no_parens  goto 3
	select_stmt  goto 2
	select_with_parens  goto 4
	simple_select  goto 5
	start  goto 1

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  select_stmt.    (1)

	.  reduce 1 (src line 211)


state 3
	select_stmt:  select_no_parens.    (2)

	.  reduce 2 (src line 225)


state 4
	select_stmt:  select_with_parens.    (3)
	select_clause:  select_with_parens.    (11)

	$end  reduce 3 (src line 227)
	.  reduce 11 (src line 258)


state 5
	select_no_parens:  simple_select.    (6)
	select_clause:  simple_select.    (10)

	$end  reduce 6 (src line 240)
	')'  reduce 6 (src line 240)
	.  reduce 10 (src line 256)


state 6
	select_no_parens:  select_clause.sort_clause 
	select_no_parens:  select_clause.opt_sort_clause for_locking_clause opt_select_limit 
	select_no_parens:  select_clause.opt_sort_clause select_limit opt_for_locking_clause 
	simple_select:  select_clause.UNION all_or_distinct select_clause 
	simple_select:  select_clause.INTERSECT all_or_distinct select_clause 
	simple_select:  select_clause.EXCEPT all_or_distinct select_clause 
	opt_sort_clause: .    (206)

	ORDER  shift 14
	UNION  shift 11
	EXCEPT  shift 13
	INTERSECT  shift 12
	.  reduce 206 (src line 1546)

	opt_sort_clause  goto 10
	sort_clause  goto 9

state 7
	select_with_parens:  '('.select_no_parens ')' 
	select_with_parens:  '('.select_with_parens ')' 

	SELECT  shift 8
	'('  shift 7
	.  error

	select_clause  goto 6
	select_no_parens  goto 15
	select_with_parens  goto 16
	simple_select  goto 5

state 8
	simple_select:  SELECT.opt_target_list into_clause from_clause where_clause group_clause having_clause 
	simple_select:  SELECT.distinct_clause target_list into_clause from_clause where_clause group_clause having_clause 
	opt_target_list: .    (113)

	IDENT  shift 65
	BuiltinFucTimeAddIdent  shift 78
	BuiltinFucTimeSubIdent  shift 79
	DOUBLE_QUOTA_STRING  shift 48
	PARAM_MARKER  shift 60
	SINGLE_QUOTA_STRING  shift 47
	STRING  shift 46
	BIT_NUMBER  shift 43
	HEX_NUMBER  shift 44
	NUMBER  shift 45
	AVG  shift 68
	COUNT  shift 69
	DISTINCT  shift 22
	DISTINCTROW  shift 23
	FALSE  shift 63
	MAX  shift 70
	MIN  shift 71
	NULL  shift 50
	SUM  shift 72
	TRUE  shift 62
	CAST  shift 58
	CONVERT  shift 59
	LEFT  shift 75
	NOT  shift 25
	CASE  shift 61
	IS  shift 77
	IN  shift 76
	EXISTS  shift 41
	'+'  shift 35
	'-'  shift 36
	'*'  shift 64
	'~'  shift 37
	'('  shift 39
	'!'  shift 38
	'@'  shift 66
	.  reduce 113 (src line 1057)

	distinct_clause  goto 18
	select_with_parens  goto 40
	identifier  goto 52
	opt_distinct  goto 20
	true_or_false  goto 49
	double_at_ident  goto 54
	func_name  goto 55
	func_name_time_add  goto 73
	func_name_time_sub  goto 74
	identifier_or_star  goto 51
	keyword_as_func  goto 67
	single_at_ident  goto 53
	agg_expr  goto 56
	bit_expr  goto 28
	boolean_primary  goto 26
	case_expr  goto 42
	column_ref  goto 31
	expr  goto 24
	func_expr  goto 33
	literal  goto 30
	marker  goto 34
	predicate  goto 27
	simple_expr  goto 29
	target_el  goto 21
	time_expr  goto 57
	variable  goto 32
	opt_target_list  goto 17
	target_list  goto 19

state 9
	select_no_parens:  select_clause sort_clause.    (7)
	opt_sort_clause:  sort_clause.    (205)

	$end  reduce 7 (src line 245)
	')'  reduce 7 (src line 245)
	.  reduce 205 (src line 1541)


state 10
	select_no_parens:  select_clause opt_sort_clause.for_locking_clause opt_select_limit 
	select_no_parens:  select_clause opt_sort_clause.select_limit opt_for_locking_clause 

	FOR  shift 82
	LIMIT  shift 86
	LOCK  shift 83
	OFFSET  shift 87
	.  error

	for_locking_clause  goto 80
	select_limit  goto 81
	offset_expr  goto 85
	limit_list  goto 84

state 11
	simple_select:  select_clause UNION.all_or_distinct select_clause 
	all_or_distinct: .    (156)

	ALL  shift 89
	DISTINCT  shift 22
	DISTINCTROW  shift 23
	.  reduce 156 (src line 1200)

	all_or_distinct  goto 88
	opt_distinct  goto 90

state 12
	simple_select:  select_clause INTERSECT.all_or_distinct select_clause 
	all_or_distinct: .    (156)

	ALL  shift 89
	DISTINCT  shift 22
	DISTINCTROW  shift 23
	.  reduce 156 (src line 1200)

	all_or_distinct  goto 91
	opt_distinct  goto 90

state 13
	simple_select:  select_clause EXCEPT.all_or_distinct select_clause 
	all_or_distinct: .    (156)

	ALL  shift 89
	DISTINCT  shift 22
	DISTINCTROW  shift 23
	.  reduce 156 (src line 1200)

	all_or_distinct  goto 92
	opt_distinct  goto 90

state 14
	sort_clause:  ORDER.BY sortby_list 

	BY  shift 93
	.  error


state 15
	select_with_parens:  '(' select_no_parens.')' 

	')'  shift 94
	.  error


state 16
	select_with_parens:  '(' select_with_parens.')' 
	select_clause:  select_with_parens.    (11)

	')'  shift 95
	.  reduce 11 (src line 258)


state 17
	simple_select:  SELECT opt_target_list.into_clause from_clause where_clause group_clause having_clause 
	into_clause: .    (160)

	INTO  shift 97
	.  reduce 160 (src line 1225)

	into_clause  goto 96

state 18
	simple_select:  SELECT distinct_clause.target_list into_clause from_clause where_clause group_clause having_clause 

	IDENT  shift 65
	BuiltinFucTimeAddIdent  shift 78
	BuiltinFucTimeSubIdent  shift 79
	DOUBLE_QUOTA_STRING  shift 48
	PARAM_MARKER  shift 60
	SINGLE_QUOTA_STRING  shift 47
	STRING  shift 46
	BIT_NUMBER  shift 43
	HEX_NUMBER  shift 44
	NUMBER  shift 45
	AVG  shift 68
	COUNT  shift 69
	FALSE  shift 63
	MAX  shift 70
	MIN  shift 71
	NULL  shift 50
	SUM  shift 72
	TRUE  shift 62
	CAST  shift 58
	CONVERT  shift 59
	LEFT  shift 75
	NOT  shift 25
	CASE  shift 61
	IS  shift 77
	IN  shift 76
	EXISTS  shift 41
	'+'  shift 35
	'-'  shift 36
	'*'  shift 64
	'~'  shift 37
	'('  shift 39
	'!'  shift 38
	'@'  shift 66
	.  error

	select_with_parens  goto 40
	identifier  goto 52
	true_or_false  goto 49
	double_at_ident  goto 54
	func_name  goto 55
	func_name_time_add  goto 73
	func_name_time_sub  goto 74
	identifier_or_star  goto 51
	keyword_as_func  goto 67
	single_at_ident  goto 53
	agg_expr  goto 56
	bit_expr  goto 28
	boolean_primary  goto 26
	case_expr  goto 42
	column_ref  goto 31
	expr  goto 24
	func_expr  goto 33
	literal  goto 30
	marker  goto 34
	predicate  goto 27
	simple_expr  goto 29
	target_el  goto 21
	time_expr  goto 57
	variable  goto 32
	target_list  goto 98

state 19
	opt_target_list:  target_list.    (112)
	target_list:  target_list.',' target_el 

	','  shift 99
	.  reduce 112 (src line 1052)


state 20
	distinct_clause:  opt_distinct.    (153)

	.  reduce 153 (src line 1175)


state 21
	target_list:  target_el.    (114)

	.  reduce 114 (src line 1062)


state 22
	opt_distinct:  DISTINCT.    (157)

	.  reduce 157 (src line 1204)


state 23
	opt_distinct:  DISTINCTROW.    (158)

	.  reduce 158 (src line 1209)


state 24
	expr:  expr.OR expr 
	expr:  expr.OO expr 
	expr:  expr.XOR expr 
	expr:  expr.AND expr 
	expr:  expr.AA expr 
	target_el:  expr.opt_alias 
	opt_alias: .    (122)

	IDENT  shift 65
	DOUBLE_QUOTA_STRING  shift 111
	SINGLE_QUOTA_STRING  shift 112
	STRING  shift 110
	AS  shift 107
	OR  shift 100
	OO  shift 101
	AND  shift 103
	AA  shift 104
	XOR  shift 102
	.  reduce 122 (src line 1104)

	alias  goto 106
	alias_name  goto 108
	identifier  goto 109
	opt_alias  goto 105

state 25
	expr:  NOT.expr 

	IDENT  shift 65
	BuiltinFucTimeAddIdent  shift 78
	BuiltinFucTimeSubIdent  shift 79
	DOUBLE_QUOTA_STRING  shift 48
	PARAM_MARKER  shift 60
	SINGLE_QUOTA_STRING  shift 47
	STRING  shift 46
	BIT_NUMBER  shift 43
	HEX_NUMBER  shift 44
	NUMBER  shift 45
	AVG  shift 68
	COUNT  shift 69
	FALSE  shift 63
	MAX  shift 70
	MIN  shift 71
	NULL  shift 50
	SUM  shift 72
	TRUE  shift 62
	CAST  shift 58
	CONVERT  shift 59
	LEFT  shift 75
	NOT  shift 25
	CASE  shift 61
	IS  shift 77
	IN  shift 76
	EXISTS  shift 41
	'+'  shift 35
	'-'  shift 36
	'*'  shift 64
	'~'  shift 37
	'('  shift 39
	'!'  shift 38
	'@'  shift 66
	.  error

	select_with_parens  goto 40
	identifier  goto 52
	true_or_false  goto 49
	double_at_ident  goto 54
	func_name  goto 55
	func_name_time_add  goto 73
	func_name_time_sub  goto 74
	identifier_or_star  goto 51
	keyword_as_func  goto 67
	single_at_ident  goto 53
	agg_expr  goto 56
	bit_expr  goto 28
	boolean_primary  goto 26
	case_expr  goto 42
	column_ref  goto 31
	expr  goto 113
	func_expr  goto 33
	literal  goto 30
	marker  goto 34
	predicate  goto 27
	simple_expr  goto 29
	time_expr  goto 57
	variable  goto 32

state 26
	expr:  boolean_primary.is_or_not true_or_false 
	expr:  boolean_primary.    (24)
	boolean_primary:  boolean_primary.is_or_not NULL 
	boolean_primary:  boolean_primary.LEG predicate 
	boolean_primary:  boolean_primary.comparison_operator predicate 
	boolean_primary:  boolean_primary.comparison_operator subquery_type select_with_parens 

	IS  shift 117
	'='  shift 118
	'<'  shift 122
	'>'  shift 120
	GE  shift 119
	LE  shift 121
	LG  shift 123
	LNE  shift 124
	LEG  shift 115
	.  reduce 24 (src line 395)

	comparison_operator  goto 116
	is_or_not  goto 114

state 27
	boolean_primary:  predicate.    (29)

	.  reduce 29 (src line 453)


state 28
	predicate:  bit_expr.opt_not IN select_with_parens 
	predicate:  bit_expr.opt_not IN '(' expr_list ')' 
	predicate:  bit_expr.opt_not BETWEEN bit_expr AND predicate 
	predicate:  bit_expr.SOUNDS LIKE bit_expr 
	predicate:  bit_expr.opt_not LIKE simple_expr 
	predicate:  bit_expr.opt_not REGEXP bit_expr 
	predicate:  bit_expr.    (36)
	bit_expr:  bit_expr.'|' bit_expr 
	bit_expr:  bit_expr.'&' bit_expr 
	bit_expr:  bit_expr.SL bit_expr 
	bit_expr:  bit_expr.SR bit_expr 
	bit_expr:  bit_expr.'+' bit_expr 
	bit_expr:  bit_expr.'-' bit_expr 
	bit_expr:  bit_expr.'*' bit_expr 
	bit_expr:  bit_expr.'/' bit_expr 
	bit_expr:  bit_expr.DIV bit_expr 
	bit_expr:  bit_expr.MOD bit_expr 
	bit_expr:  bit_expr.'%' bit_expr 
	bit_expr:  bit_expr.'^' bit_expr 
	bit_expr:  bit_expr.'+' INTERVAL expr time_unit 
	bit_expr:  bit_expr.'-' INTERVAL expr time_unit 
	opt_not: .    (144)

	SOUNDS  shift 126
	NOT  shift 139
	BETWEEN  reduce 144 (src line 1144)
	LIKE  reduce 144 (src line 1144)
	REGEXP  reduce 144 (src line 1144)
	IN  reduce 144 (src line 1144)
	SL  shift 129
	SR  shift 130
	'|'  shift 127
	'&'  shift 128
	'+'  shift 131
	'-'  shift 132
	'*'  shift 133
	'/'  shift 134
	'%'  shift 137
	DIV  shift 135
	MOD  shift 136
	'^'  shift 138
	.  reduce 36 (src line 523)

	opt_not  goto 125

state 29
	bit_expr:  simple_expr.    (51)
	simple_expr:  simple_expr.COLLATE collation_name 
	simple_expr:  simple_expr.OO simple_expr 

	OO  shift 141
	COLLATE  shift 140
	.  reduce 51 (src line 616)


state 30
	simple_expr:  literal.    (52)

	.  reduce 52 (src line 621)


state 31
	simple_expr:  column_ref.    (53)

	.  reduce 53 (src line 629)


state 32
	simple_expr:  variable.    (54)

	.  reduce 54 (src line 634)


state 33
	simple_expr:  func_expr.    (55)

	.  reduce 55 (src line 638)


state 34
	simple_expr:  marker.    (57)

	.  reduce 57 (src line 647)


state 35
	simple_expr:  '+'.simple_expr 

	IDENT  shift 65
	BuiltinFucTimeAddIdent  shift 78
	BuiltinFucTimeSubIdent  shift 79
	DOUBLE_QUOTA_STRING  shift 48
	PARAM_MARKER  shift 60
	SINGLE_QUOTA_STRING  shift 47
	STRING  shift 46
	BIT_NUMBER  shift 43
	HEX_NUMBER  shift 44
	NUMBER  shift 45
	AVG  shift 68
	COUNT  shift 69
	FALSE  shift 63
	MAX  shift 70
	MIN  shift 71
	NULL  shift 50
	SUM  shift 72
	TRUE  shift 62
	CAST  shift 58
	CONVERT  shift 59
	LEFT  shift 75
	CASE  shift 61
	IS  shift 77
	IN  shift 76
	EXISTS  shift 41
	'+'  shift 35
	'-'  shift 36
	'*'  shift 64
	'~'  shift 37
	'('  shift 39
	'!'  shift 38
	'@'  shift 66
	.  error

	select_with_parens  goto 40
	identifier  goto 52
	true_or_false  goto 49
	double_at_ident  goto 54
	func_name  goto 55
	func_name_time_add  goto 73
	func_name_time_sub  goto 74
	identifier_or_star  goto 51
	keyword_as_func  goto 67
	single_at_ident  goto 53
	agg_expr  goto 56
	case_expr  goto 42
	column_ref  goto 31
	func_expr  goto 33
	literal  goto 30
	marker  goto 34
	simple_expr  goto 142
	time_expr  goto 57
	variable  goto 32

state 36
	simple_expr:  '-'.simple_expr 

	IDENT  shift 65
	BuiltinFucTimeAddIdent  shift 78
	BuiltinFucTimeSubIdent  shift 79
	DOUBLE_QUOTA_STRING  shift 48
	PARAM_MARKER  shift 60
	SINGLE_QUOTA_STRING  shift 47
	STRING  shift 46
	BIT_NUMBER  shift 43
	HEX_NUMBER  shift 44
	NUMBER  shift 45
	AVG  shift 68
	COUNT  shift 69
	FALSE  shift 63
	MAX  shift 70
	MIN  shift 71
	NULL  shift 50
	SUM  shift 72
	TRUE  shift 62
	CAST  shift 58
	CONVERT  shift 59
	LEFT  shift 75
	CASE  shift 61
	IS  shift 77
	IN  shift 76
	EXISTS  shift 41
	'+'  shift 35
	'-'  shift 36
	'*'  shift 64
	'~'  shift 37
	'('  shift 39
	'!'  shift 38
	'@'  shift 66
	.  error

	select_with_parens  goto 40
	identifier  goto 52
	true_or_false  goto 49
	double_at_ident  goto 54
	func_name  goto 55
	func_name_time_add  goto 73
	func_name_time_sub  goto 74
	identifier_or_star  goto 51
	keyword_as_func  goto 67
	single_at_ident  goto 53
	agg_expr  goto 56
	case_expr  goto 42
	column_ref  goto 31
	func_expr  goto 33
	literal  goto 30
	marker  goto 34
	simple_expr  goto 143
	time_expr  goto 57
	variable  goto 32

state 37
	simple_expr:  '~'.simple_expr 

	IDENT  shift 65
	BuiltinFucTimeAddIdent  shift 78
	BuiltinFucTimeSubIdent  shift 79
	DOUBLE_QUOTA_STRING  shift 48
	PARAM_MARKER  shift 60
	SINGLE_QUOTA_STRING  shift 47
	STRING  shift 46
	BIT_NUMBER  shift 43
	HEX_NUMBER  shift 44
	NUMBER  shift 45
	AVG  shift 68
	COUNT  shift 69
	FALSE  shift 63
	MAX  shift 70
	MIN  shift 71
	NULL  shift 50
	SUM  shift 72
	TRUE  shift 62
	CAST  shift 58
	CONVERT  shift 59
	LEFT  shift 75
	CASE  shift 61
	IS  shift 77
	IN  shift 76
	EXISTS  shift 41
	'+'  shift 35
	'-'  shift 36
	'*'  shift 64
	'~'  shift 37
	'('  shift 39
	'!'  shift 38
	'@'  shift 66
	.  error

	select_with_parens  goto 40
	identifier  goto 52
	true_or_false  goto 49
	double_at_ident  goto 54
	func_name  goto 55
	func_name_time_add  goto 73
	func_name_time_sub  goto 74
	identifier_or_star  goto 51
	keyword_as_func  goto 67
	single_at_ident  goto 53
	agg_expr  goto 56
	case_expr  goto 42
	column_ref  goto 31
	func_expr  goto 33
	literal  goto 30
	marker  goto 34
	simple_expr  goto 144
	time_expr  goto 57
	variable  goto 32

state 38
	simple_expr:  '!'.simple_expr 

	IDENT  shift 65
	BuiltinFucTimeAddIdent  shift 78
	BuiltinFucTimeSubIdent  shift 79
	DOUBLE_QUOTA_STRING  shift 48
	PARAM_MARKER  shift 60
	SINGLE_QUOTA_STRING  shift 47
	STRING  shift 46
	BIT_NUMBER  shift 43
	HEX_NUMBER  shift 44
	NUMBER  shift 45
	AVG  shift 68
	COUNT  shift 69
	FALSE  shift 63
	MAX  shift 70
	MIN  shift 71
	NULL  shift 50
	SUM  shift 72
	TRUE  shift 62
	CAST  shift 58
	CONVERT  shift 59
	LEFT  shift 75
	CASE  shift 61
	IS  shift 77
	IN  shift 76
	EXISTS  shift 41
	'+'  shift 35
	'-'  shift 36
	'*'  shift 64
	'~'  shift 37
	'('  shift 39
	'!'  shift 38
	'@'  shift 66
	.  error

	select_with_parens  goto 40
	identifier  goto 52
	true_or_false  goto 49
	double_at_ident  goto 54
	func_name  goto 55
	func_name_time_add  goto 73
	func_name_time_sub  goto 74
	identifier_or_star  goto 51
	keyword_as_func  goto 67
	single_at_ident  goto 53
	agg_expr  goto 56
	case_expr  goto 42
	column_ref  goto 31
	func_expr  goto 33
	literal  goto 30
	marker  goto 34
	simple_expr  goto 145
	time_expr  goto 57
	variable  goto 32

state 39
	select_with_parens:  '('.select_no_parens ')' 
	select_with_parens:  '('.select_with_parens ')' 
	simple_expr:  '('.expr ')' 

	IDENT  shift 65
	BuiltinFucTimeAddIdent  shift 78
	BuiltinFucTimeSubIdent  shift 79
	DOUBLE_QUOTA_STRING  shift 48
	PARAM_MARKER  shift 60
	SINGLE_QUOTA_STRING  shift 47
	STRING  shift 46
	BIT_NUMBER  shift 43
	HEX_NUMBER  shift 44
	NUMBER  shift 45
	AVG  shift 68
	COUNT  shift 69
	FALSE  shift 63
	MAX  shift 70
	MIN  shift 71
	NULL  shift 50
	SELECT  shift 8
	SUM  shift 72
	TRUE  shift 62
	CAST  shift 58
	CONVERT  shift 59
	LEFT  shift 75
	NOT  shift 25
	CASE  shift 61
	IS  shift 77
	IN  shift 76
	EXISTS  shift 41
	'+'  shift 35
	'-'  shift 36
	'*'  shift 64
	'~'  shift 37
	'('  shift 39
	'!'  shift 38
	'@'  shift 66
	.  error

	select_clause  goto 6
	select_no_parens  goto 15
	select_with_parens  goto 146
	simple_select  goto 5
	identifier  goto 52
	true_or_false  goto 49
	double_at_ident  goto 54
	func_name  goto 55
	func_name_time_add  goto 73
	func_name_time_sub  goto 74
	identifier_or_star  goto 51
	keyword_as_func  goto 67
	single_at_ident  goto 53
	agg_expr  goto 56
	bit_expr  goto 28
	boolean_primary  goto 26
	case_expr  goto 42
	column_ref  goto 31
	expr  goto 147
	func_expr  goto 33
	literal  goto 30
	marker  goto 34
	predicate  goto 27
	simple_expr  goto 29
	time_expr  goto 57
	variable  goto 32

state 40
	simple_expr:  select_with_parens.    (64)

	.  reduce 64 (src line 685)


state 41
	simple_expr:  EXISTS.select_with_parens 

	'('  shift 7
	.  error

	select_with_parens  goto 148

state 42
	simple_expr:  case_expr.    (66)

	.  reduce 66 (src line 697)


state 43
	literal:  BIT_NUMBER.    (67)

	.  reduce 67 (src line 702)


state 44
	literal:  HEX_NUMBER.    (68)

	.  reduce 68 (src line 709)


state 45
	literal:  NUMBER.    (69)

	.  reduce 69 (src line 715)


state 46
	literal:  STRING.    (70)

	.  reduce 70 (src line 721)


state 47
	literal:  SINGLE_QUOTA_STRING.    (71)

	.  reduce 71 (src line 727)


state 48
	literal:  DOUBLE_QUOTA_STRING.    (72)

	.  reduce 72 (src line 733)


state 49
	literal:  true_or_false.    (73)

	.  reduce 73 (src line 739)


state 50
	literal:  NULL.    (74)

	.  reduce 74 (src line 751)


state 51
	column_ref:  identifier_or_star.    (81)

	.  reduce 81 (src line 803)


state 52
	identifier_or_star:  identifier.    (76)
	column_ref:  identifier.'.' identifier_or_star 
	column_ref:  identifier.'.' identifier '.' identifier_or_star 
	func_name:  identifier.    (119)

	'('  reduce 119 (src line 1092)
	'.'  shift 149
	.  reduce 76 (src line 770)


state 53
	variable:  single_at_ident.    (78)

	.  reduce 78 (src line 780)


state 54
	variable:  double_at_ident.    (79)
	variable:  double_at_ident.'.' identifier 

	'.'  shift 150
	.  reduce 79 (src line 787)


state 55
	func_expr:  func_name.'(' ')' 
	func_expr:  func_name.'(' expr_list ')' 

	'('  shift 151
	.  error


state 56
	func_expr:  agg_expr.    (86)

	.  reduce 86 (src line 837)


state 57
	func_expr:  time_expr.    (87)

	.  reduce 87 (src line 841)


state 58
	func_expr:  CAST.'(' expr AS cast_type ')' 

	'('  shift 152
	.  error


state 59
	func_expr:  CONVERT.'(' expr ',' cast_type ')' 
	func_expr:  CONVERT.'(' expr USING alias_name ')' 

	'('  shift 153
	.  error


state 60
	marker:  PARAM_MARKER.    (103)

	.  reduce 103 (src line 989)


state 61
	case_expr:  CASE.case_arg when_list else_arg END 
	case_arg: .    (106)

	IDENT  shift 65
	BuiltinFucTimeAddIdent  shift 78
	BuiltinFucTimeSubIdent  shift 79
	DOUBLE_QUOTA_STRING  shift 48
	PARAM_MARKER  shift 60
	SINGLE_QUOTA_STRING  shift 47
	STRING  shift 46
	BIT_NUMBER  shift 43
	HEX_NUMBER  shift 44
	NUMBER  shift 45
	AVG  shift 68
	COUNT  shift 69
	FALSE  shift 63
	MAX  shift 70
	MIN  shift 71
	NULL  shift 50
	SUM  shift 72
	TRUE  shift 62
	CAST  shift 58
	CONVERT  shift 59
	LEFT  shift 75
	NOT  shift 25
	CASE  shift 61
	IS  shift 77
	IN  shift 76
	EXISTS  shift 41
	'+'  shift 35
	'-'  shift 36
	'*'  shift 64
	'~'  shift 37
	'('  shift 39
	'!'  shift 38
	'@'  shift 66
	.  reduce 106 (src line 1012)

	select_with_parens  goto 40
	identifier  goto 52
	true_or_false  goto 49
	double_at_ident  goto 54
	func_name  goto 55
	func_name_time_add  goto 73
	func_name_time_sub  goto 74
	identifier_or_star  goto 51
	keyword_as_func  goto 67
	single_at_ident  goto 53
	agg_expr  goto 56
	bit_expr  goto 28
	boolean_primary  goto 26
	case_arg  goto 154
	case_expr  goto 42
	column_ref  goto 31
	expr  goto 155
	func_expr  goto 33
	literal  goto 30
	marker  goto 34
	predicate  goto 27
	simple_expr  goto 29
	time_expr  goto 57
	variable  goto 32

state 62
	true_or_false:  TRUE.    (129)

	.  reduce 129 (src line 1117)


state 63
	true_or_false:  FALSE.    (130)

	.  reduce 130 (src line 1119)


state 64
	identifier_or_star:  '*'.    (77)

	.  reduce 77 (src line 775)


state 65
	identifier:  IDENT.    (75)

	.  reduce 75 (src line 764)


state 66
	single_at_ident:  '@'.identifier 
	double_at_ident:  '@'.'@' identifier 

	IDENT  shift 65
	'@'  shift 157
	.  error

	identifier  goto 156

state 67
	func_name:  keyword_as_func.    (120)

	.  reduce 120 (src line 1097)


state 68
	agg_expr:  AVG.'(' all_or_distinct expr ')' 

	'('  shift 158
	.  error


state 69
	agg_expr:  COUNT.'(' opt_distinct expr_list ')' 
	agg_expr:  COUNT.'(' ALL expr ')' 
	agg_expr:  COUNT.'(' expr ')' 
	agg_expr:  COUNT.'(' '*' ')' 

	'('  shift 159
	.  error


state 70
	agg_expr:  MAX.'(' all_or_distinct expr ')' 

	'('  shift 160
	.  error


state 71
	agg_expr:  MIN.'(' all_or_distinct expr ')' 

	'('  shift 161
	.  error


state 72
	agg_expr:  SUM.'(' all_or_distinct expr ')' 

	'('  shift 162
	.  error


state 73
	time_expr:  func_name_time_add.'(' expr ',' INTERVAL expr time_unit ')' 

	'('  shift 163
	.  error


state 74
	time_expr:  func_name_time_sub.'(' expr ',' INTERVAL expr time_unit ')' 

	'('  shift 164
	.  error


state 75
	keyword_as_func:  LEFT.    (147)

	.  reduce 147 (src line 1154)


state 76
	keyword_as_func:  IN.    (148)

	.  reduce 148 (src line 1156)


state 77
	keyword_as_func:  IS.    (149)

	.  reduce 149 (src line 1157)


state 78
	func_name_time_add:  BuiltinFucTimeAddIdent.    (151)

	.  reduce 151 (src line 1162)


state 79
	func_name_time_sub:  BuiltinFucTimeSubIdent.    (152)

	.  reduce 152 (src line 1165)


state 80
	select_no_parens:  select_clause opt_sort_clause for_locking_clause.opt_select_limit 
	opt_select_limit: .    (219)

	LIMIT  shift 86
	OFFSET  shift 87
	.  reduce 219 (src line 1625)

	opt_select_limit  goto 165
	select_limit  goto 166
	offset_expr  goto 85
	limit_list  goto 84

state 81
	select_no_parens:  select_clause opt_sort_clause select_limit.opt_for_locking_clause 
	opt_for_locking_clause: .    (215)

	FOR  shift 82
	LOCK  shift 83
	.  reduce 215 (src line 1601)

	for_locking_clause  goto 168
	opt_for_locking_clause  goto 167

state 82
	for_locking_clause:  FOR.UPDATE 

	UPDATE  shift 169
	.  error


state 83
	for_locking_clause:  LOCK.IN SHARE MODE 

	IN  shift 170
	.  error


state 84
	select_limit:  limit_list.offset_expr 
	select_limit:  limit_list.    (222)

	OFFSET  shift 87
	.  reduce 222 (src line 1640)

	offset_expr  goto 171

state 85
	select_limit:  offset_expr.limit_list 
	select_limit:  offset_expr.    (223)

	LIMIT  shift 86
	.  reduce 223 (src line 1644)

	limit_list  goto 172

state 86
	limit_list:  LIMIT.rows 
	limit_list:  LIMIT.rows ',' rows_offset 

	IDENT  shift 65
	BuiltinFucTimeAddIdent  shift 78
	BuiltinFucTimeSubIdent  shift 79
	DOUBLE_QUOTA_STRING  shift 48
	PARAM_MARKER  shift 60
	SINGLE_QUOTA_STRING  shift 47
	STRING  shift 46
	BIT_NUMBER  shift 43
	HEX_NUMBER  shift 44
	NUMBER  shift 45
	AVG  shift 68
	COUNT  shift 69
	FALSE  shift 63
	MAX  shift 70
	MIN  shift 71
	NULL  shift 50
	SUM  shift 72
	TRUE  shift 62
	CAST  shift 58
	CONVERT  shift 59
	LEFT  shift 75
	NOT  shift 25
	CASE  shift 61
	IS  shift 77
	IN  shift 76
	EXISTS  shift 41
	'+'  shift 35
	'-'  shift 36
	'*'  shift 64
	'~'  shift 37
	'('  shift 39
	'!'  shift 38
	'@'  shift 66
	.  error

	select_with_parens  goto 40
	identifier  goto 52
	true_or_false  goto 49
	double_at_ident  goto 54
	func_name  goto 55
	func_name_time_add  goto 73
	func_name_time_sub  goto 74
	identifier_or_star  goto 51
	keyword_as_func  goto 67
	single_at_ident  goto 53
	agg_expr  goto 56
	bit_expr  goto 28
	boolean_primary  goto 26
	case_expr  goto 42
	column_ref  goto 31
	expr  goto 174
	func_expr  goto 33
	literal  goto 30
	marker  goto 34
	predicate  goto 27
	simple_expr  goto 29
	time_expr  goto 57
	variable  goto 32
	rows  goto 173

state 87
	offset_expr:  OFFSET.rows_offset 

	IDENT  shift 65
	BuiltinFucTimeAddIdent  shift 78
	BuiltinFucTimeSubIdent  shift 79
	DOUBLE_QUOTA_STRING  shift 48
	PARAM_MARKER  shift 60
	SINGLE_QUOTA_STRING  shift 47
	STRING  shift 46
	BIT_NUMBER  shift 43
	HEX_NUMBER  shift 44
	NUMBER  shift 45
	AVG  shift 68
	COUNT  shift 69
	FALSE  shift 63
	MAX  shift 70
	MIN  shift 71
	NULL  shift 50
	SUM  shift 72
	TRUE  shift 62
	CAST  shift 58
	CONVERT  shift 59
	LEFT  shift 75
	NOT  shift 25
	CASE  shift 61
	IS  shift 77
	IN  shift 76
	EXISTS  shift 41
	'+'  shift 35
	'-'  shift 36
	'*'  shift 64
	'~'  shift 37
	'('  shift 39
	'!'  shift 38
	'@'  shift 66
	.  error

	select_with_parens  goto 40
	identifier  goto 52
	true_or_false  goto 49
	double_at_ident  goto 54
	func_name  goto 55
	func_name_time_add  goto 73
	func_name_time_sub  goto 74
	identifier_or_star  goto 51
	keyword_as_func  goto 67
	single_at_ident  goto 53
	agg_expr  goto 56
	bit_expr  goto 28
	boolean_primary  goto 26
	case_expr  goto 42
	column_ref  goto 31
	expr  goto 176
	func_expr  goto 33
	literal  goto 30
	marker  goto 34
	predicate  goto 27
	rows_offset  goto 175
	simple_expr  goto 29
	time_expr  goto 57
	variable  goto 32

state 88
	simple_select:  select_clause UNION all_or_distinct.select_clause 

	SELECT  shift 8
	'('  shift 7
	.  error

	select_clause  goto 177
	select_with_parens  goto 179
	simple_select  goto 178

state 89
	all_or_distinct:  ALL.    (154)

	.  reduce 154 (src line 1191)


state 90
	all_or_distinct:  opt_distinct.    (155)

	.  reduce 155 (src line 1196)


state 91
	simple_select:  select_clause INTERSECT all_or_distinct.select_clause 

	SELECT  shift 8
	'('  shift 7
	.  error

	select_clause  goto 180
	select_with_parens  goto 179
	simple_select  goto 178

state 92
	simple_select:  select_clause EXCEPT all_or_distinct.select_clause 

	SELECT  shift 8
	'('  shift 7
	.  error

	select_clause  goto 181
	select_with_parens  goto 179
	simple_select  goto 178
